fix: prevents document sidebar from collapsing

--- a/packages/payload/src/admin/components/elements/DocumentFields/index.scss
+++ b/packages/payload/src/admin/components/elements/DocumentFields/index.scss
@@ -7,6 +7,10 @@
 
   &--has-sidebar {
     .document-fields {
+      &__main {
+        width: 66.66%;
+      }
+
       &__edit {
         [dir='ltr'] & {
           top: 0;
@@ -52,6 +56,7 @@
     width: 33.33%;
     height: calc(100vh - var(--doc-controls-height));
     min-width: var(--doc-sidebar-width);
+    flex-shrink: 0;
   }
 
   &__sidebar {
